[package]
name = "transformer"
version = "0.1.0"
authors = ["pdell <paolod29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.48"
glob = "0.3.0"
clap = "2.33.0"
iced = "0.1"